customize form, check if card element is valid before submitting