@@ -18,7 +18,6 @@ package alfio.util;
 
 import lombok.experimental.UtilityClass;
 import lombok.extern.log4j.Log4j2;
-import org.apache.pdfbox.io.IOUtils;
 
 import javax.servlet.ServletInputStream;
 import javax.servlet.http.HttpServletRequest;
@@ -28,9 +27,10 @@ import java.util.Optional;
 @Log4j2
 @UtilityClass
 public class RequestUtils {
+
     public static Optional<String> readRequest(HttpServletRequest request) {
-        try (ServletInputStream is = request.getInputStream()) {
-            return Optional.ofNullable(IOUtils.toByteArray(is)).map(b -> new String(b, StandardCharsets.UTF_8));
+        try (ServletInputStream is = request.getInputStream()){
+            return Optional.ofNullable(is.readAllBytes()).map(b -> new String(b, StandardCharsets.UTF_8));
         } catch (Exception e) {
             log.error("exception during request conversion", e);
             return Optional.empty();
